--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,14 @@ def javaVersion = JavaVersion.VERSION_1_7
 def bakPath = file("${buildDir}/bakApk/")
 
 android {
+    signingConfigs {
+        release {
+            keyAlias 'medici'
+            keyPassword '123456'
+            storeFile file('E:/AS_WORKSPANCE/TinkerDemo/app/tinker.jks')
+            storePassword '123456'
+        }
+    }
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.medici.tinker"
@@ -16,30 +24,26 @@ android {
         multiDexEnabled true
         flavorDimensions "1.0"
     }
-
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
         }
     }
-
     compileOptions {
         sourceCompatibility javaVersion
         targetCompatibility javaVersion
     }
-
     //recommend
     dexOptions {
         jumboMode = true
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
-
     //真正的多渠道脚本支持
     productFlavors {
 
@@ -58,29 +62,27 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.0.0-beta1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
-
     //optional, help to generate the final application
-    compileOnly('com.tencent.tinker:tinker-android-anno:1.9.1')
+    compileOnly 'com.tencent.tinker:tinker-android-anno:1.9.1'
     //tinker's main Android lib
     annotationProcessor('com.tencent.tinker:tinker-android-anno:1.9.1')
-    implementation('com.tencent.tinker:tinker-android-lib:1.9.1')
-
-    implementation('com.android.support:multidex:1.0.0')
+    implementation 'com.tencent.tinker:tinker-android-lib:1.9.1'
+    implementation 'com.android.support:multidex:1.0.0'
 }
 
 ext {
     tinkerEnable = true
     tinkerID = "1.0"
-    tinkerOldApkPath = "${bakPath}/app-0511-12-36-20"
-    tinkerApplyMappingPath = "${bakPath}/app-0511-12-36-20"
-    tinkerApplyResourcePath = "${bakPath}/app-0511-12-36-20"
-    tinkerBuildFlavorDirectory = "${bakPath}/app-0511-12-36-20"
+    tinkerOldApkPath = "${bakPath}/app-0308-13-40-02"
+    tinkerApplyMappingPath = "${bakPath}/app-0308-13-40-02"
+    tinkerApplyResourcePath = "${bakPath}/app-0308-13-40-02"
+    tinkerBuildFlavorDirectory = "${bakPath}/app-0308-13-40-02"
 }
 
 def buildWithTinker() {
